Campaign with scenario-dataset pairs (#67)